--- a/index.html
+++ b/index.html
@@ -6,15 +6,28 @@
     <title>แฮกเกอร์ฮับ</title>
 
     <!-- link CSS -->
-    <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="styles.css"> -->
+    <style>
+        body {
+            background-color: #aebdca;
+        }
+        hr {
+            background-color: white;
+        }
+    </style>
 
 </head>
 <body>
-    <img src="profile.jpg" alt="" style="width: 40%; height: auto;">
-    <h1>Hacker moew hub</h1>
+    <img src="profile.jpg" alt="" style=" width: 20%; height: 20%;">
+    <!-- <hr>เพิ่มเส้นคั่น -->
+    <hr style="border-style: dashed double none; height: 20px;">
+    <h1 style="background-color: bisque;">Hacker meow hub</h1>
     <a href="https://www.google.com/?authuser=0"> ค้นหา </a>
     <br>
     <a href="contact.html">Contact</a>
+
+    <!-- <hr>เพิ่มเส้นคั่น -->
+    <hr style="border-style: dashed double none; height: 20px;">
 
     <h3>ประสบการณ์การทำงาน</h3>
     <!-- <ul>
@@ -25,7 +38,7 @@
     </ul> -->
 
     <!-- ทำให้ list นำเสนอออกมาเป็น table -->
-     <table>
+     <table style="background-color: tan;">
         <thead>
             <tr>
                 <th>
