--- a/index.html
+++ b/index.html
@@ -5,29 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>แฮกเกอร์ฮับ</title>
 
-    <!-- link CSS -->
-    <!-- <link rel="stylesheet" href="styles.css"> -->
-    <style>
+    <!-- External CSS -->
+    <link rel="stylesheet" href="styles.css">
+
+    <!-- Internal CSS -->
+    <!-- <style>
         body {
             background-color: #aebdca;
         }
         hr {
             background-color: white;
         }
-    </style>
+    </style> -->
 
 </head>
 <body>
-    <img src="profile.jpg" alt="" style=" width: 20%; height: 20%;">
-    <!-- <hr>เพิ่มเส้นคั่น -->
-    <hr style="border-style: dashed double none; height: 20px;">
-    <h1 style="background-color: bisque;">Hacker meow hub</h1>
-    <a href="https://www.google.com/?authuser=0"> ค้นหา </a>
-    <br>
-    <a href="contact.html">Contact</a>
+    <table>
+        <tr>
+            <td>
+                <img src="profile.jpg" alt="">
+            </td>
+            <td>
+                <h1>Hacker meow hub</h1>
+                <a href="https://www.google.com/?authuser=0"> ค้นหา </a>               
+            </td>
+        </tr>
+    </table>
 
     <!-- <hr>เพิ่มเส้นคั่น -->
-    <hr style="border-style: dashed double none; height: 20px;">
+    <hr>
+    <br>
+    <a href="contact.html">Contact</a>
+    <!-- <hr>เพิ่มเส้นคั่น -->
+    <hr>
 
     <h3>ประสบการณ์การทำงาน</h3>
     <!-- <ul>
